# FFRTools

./: .gitignore  README  README.md
.github/workflows/: build_all.yml  cmake-multi-platform.yml
FusionSim/: CMakeLists.txt  README.md  plot_results.py
FusionSim/src/: CLI.cpp  CLI.h  CMakeCache.txt  CMakeLists.txt  CollisionModel.cpp  CollisionModel.h  DummyFieldModel.h  FarnsworthFusorFieldModel.h  FieldModelPotentialMap.cpp  FieldModelPotentialMap.h  FusionReaction.cpp  FusionReaction.h  IFieldModel.h  IMagneticFieldModel.h  IParticleModel.h  IReactionModel.h  MagneticFieldUniform.h  ParticleModelSFPS.h  PhysicalConstants.h  ReactionModelDD.h  ReactionModelDT.h  Reactor.cpp  Reactor.h  SimulationManager.cpp  SimulationManager.h  ThermalDynamicsModel.h  Vector3dSimple.h  Visualizer.cpp  Visualizer.h  main.cpp
PotentialMap/: CMakeLists.txt
PotentialMap/matlab/: PotentialMapPort.m
PotentialMap/simulations/: collisionProcesses.py  npr.py  pascheCurve.py  vaccumPotential.py
PotentialMap/src/: CalcMacros.h  Calculators.cpp  Calculators.h  Colourisers.cpp  Colourisers.h  GeneralEE.cpp  GeneralEE.h  main.cpp
SFPS/: CMakeLists.txt
SFPS/matlab/: SFPSPort.m
SFPS/src/: Calculations.h  CollisionModel.h  Configuration.cpp  Configuration.h  FieldVector.h  MappedFieldModel.h  MicroMetrePoint.h  ParticleModel.h  PointMap.h  Proton.cpp  Proton.h  Quantities.cpp  Quantities.h  README  SFPS.cbp  Scalar.h  Vector3d.h  main.cpp  while_moving.h
SFPS/src/ParticlePlotter/: Plotter.py  Statistics.py
